# tuic

./: .gitignore  Cargo.toml  Cross.toml  LLM.md  README.md  SPEC.md  rustfmt.toml
.cross/: Dockerfile
.github/workflows/: ci.yml
tuic/: Cargo.toml  README.md
tuic-client/: Cargo.toml  README.md  multi_path_example.json
tuic-client/src/: config.rs  error.rs  forward.rs  lib.rs  main.rs  utils.rs
tuic-client/src/connection/: handle_stream.rs  handle_task.rs  load_balancer.rs  manager.rs  mod.rs  socks5.rs
tuic-client/src/socks5/: handle_task.rs  mod.rs  udp_session.rs
tuic-core/: Cargo.toml
tuic-core/src/: lib.rs  quinn.rs  quinn_impl.rs  tests.rs
tuic-core/src/model/: authenticate.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs
tuic-core/src/protocol/: authenticate.rs  packet.rs
tuic-quinn/: Cargo.toml  README.md
tuic-quinn/src/: lib.rs
tuic-server/: .gitignore  Cargo.toml  README.md  intermediate_relay_example.toml
tuic-server/src/: acl.rs  camouflage.rs  compat.rs  config.rs  error.rs  h3_quinn_compat.rs  lib.rs  main.rs  old_config.rs  restful.rs  server.rs  tls.rs  utils.rs
tuic-server/src/connection/: authenticated.rs  forwarding.rs  handle_stream.rs  handle_task.rs  mod.rs  udp_session.rs
tuic-server/tests/: camouflage_tests.rs
tuic-tests/tests/: integration_tests.rs
tuic/src/: lib.rs
tuic/src/model/: authenticate.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs
tuic/src/protocol/: connect.rs  dissociate.rs  mod.rs
