[workspace]
members = ["tuic", "tuic-quinn", "tuic-server", "tuic-client"]
resolver = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

#[patch.crates-io]
#socks5-server = { git = 'https://github.com/fokx/socks5-server.git' }
#socks5-proto = { git = "https://github.com/fokx/socks5-server.git" }
#socks5-server = { path = "/f/socks5-server/socks5-server" }
#socks5-proto = { path = "/f/socks5-server/socks5-proto" }
