[package]
name = "tuic-client"
version = "1.0.2"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Minimalistic TUIC client implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.10.0", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.21", default-features = false, features = ["std"] }
env_logger = { version = "0.11.6", default-features = false, features = ["humantime"] }
humantime = { version = "2.1.0", default-features = false }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.25", default-features = false, features = ["serde", "std"] }
once_cell = { version = "1.20.2", default-features = false, features = ["parking_lot", "std"] }
parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
quinn = { version = "0.11.6", features = ["futures-io", "runtime-tokio"] }
quinn-proto = "0.11.9"
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.23.19" }
rustls-native-certs = { version = "0.8.1" }
rustls-pemfile = { version = "2.2.0" }
rustls-pki-types = "1.11.0"
serde = { version = "1.0.217", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.138", default-features = false, features = ["std"] }
socket2 = { version = "0.5.8", default-features = false }
socks5-proto = { path = "../../socks5-server/socks5-proto", default-features = false }
socks5-server = { path = "../../socks5-server/socks5-server", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.13", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn" }
uuid = { version = "1.13.1", default-features = false, features = ["serde", "std"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
