[package]
name = "tuic-server"
version = "1.0.1"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Minimalistic TUIC server implementation as a reference"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.7.1", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false, features = ["humantime"] }
humantime = { version = "2.1.0", default-features = false }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.22", default-features = false, features = ["serde", "std"] }
parking_lot = { version = "0.12.3", default-features = false }
quinn = { version = "0.11.3", features = ["futures-io", "runtime-tokio"] }
quinn-proto = { version = "0.11.6" }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.23.12" }
rustls-pemfile = { version = "2.1.3" }
rustls-pki-types = "1.8.0"
serde = { version = "1.0.208", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.125", default-features = false, features = ["std"] }
socket2 = { version = "0.5.7", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn" }
uuid = { version = "1.10.0", default-features = false, features = ["serde", "std"] }
